openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demojam-frontend
  namespace: demojam
  labels:
    app: demojam-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demojam-frontend
  template:
    metadata:
      labels:
        app: demojam-frontend
        deployment: demojam-frontend
    spec:
      containers:
        - name: demojam-frontend
          image: "quay.io/chpeters/demojam/frontend:1.0.1"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
