openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demojam-frontend
  namespace: demojam
  labels:
    app: demojam-frontend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: demojam-frontend
    deployment: demojam-frontend
